--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -46,7 +46,15 @@
     </div>
 
     <div class="container-narrow">
+    <div class="page-header">
+      <h1>{{ page.title }} {% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</h1>
+    </div>
 
+    <div class="row-fluid">
+      <div class="span12">
+        {{ content }}
+      </div>
+    </div>
       <div class="content">
         {{ content }}
       </div>
