--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
----
-theme :
-  name : twitter
----
-
-{% include themes/twitter/default.html %}
+<!DOCTYPE html>
+<html lang="en">
+	{% include head.html %}
+		<body>
+			{{ content }}
+		</body>
+</html>
