--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,6 @@
 <meta name="robots" content="{{ page.meta-robots }}" />
 <meta name="description" content="{{ page.meta-description }}" />
 
-<link href="{{site.url}}/assets/themes/jannypie/css/main.css" rel="stylesheet">
+<link href="css/main.css" rel="stylesheet">
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="canonical" href="{{ page.url | canonical }}" />
