CSS/design edits

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,3 +8,4 @@
 <link href="css/main.css" rel="stylesheet">
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="canonical" href="{{ page.url | canonical }}" />
+<link href='http://fonts.googleapis.com/css?family=Numans|Scada:400,700' rel='stylesheet' type='text/css'>
