--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <header>
-	<nav>
+	<!--<nav>
 		<ul class="nav nav-pills pull-right">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-	</nav>
-	<h3>Jan Dennison : Blog</h3>
+	</nav>-->
+	<h1>Jan Dennison : Blog</h1>
 </header>
