--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,44 +2,52 @@
 <html lang="en">
 	{% include head.html %}
 		<body>
+			<div class="fancy-container">
+			<div class="content-container">
+				<div class="page-wrap">
+					{% include header.html %}
+					<div class="content-wrap">
+						<h1> {{ page.title }} </h1>
 
-<h1> {{ page.title }} </h1>
+							<span> {{ page.date | date: '%B' }} {{ page.date | date: '%e' }}, {{ page.date | date: '%Y' }} </span>
+							<span> {{ page.tags }} </span>
 
-<span> {{ page.date | date: '%B' }} {{ page.date | date: '%e' }}, {{ page.date | date: '%Y' }} </span>
-<span> {{ page.tags }} </span>
+							{{ page.content }}
 
-{{ page.content }}
+							<div class="prev_next post_nav">
+								{% if page.previous.url %}
+									<p class="previous">
+										«&nbsp;<a href="{{ page.previous.url }}/" rel="previous" title="{{ page.previous.title }}">{{ page.previous.title | truncatewords: 15 }}</a>
+									</p>
+								{% endif %} 
+								{% if page.next.url %}
+									<p class="next">
+										<a href="{{ page.next.url }}/" rel="next" title="{{ page.next.title }}">{{ page.next.title | truncatewords: 15 }}</a>&nbsp;»
+									</p>
+								{% endif %}
+							</div>
 
-<div class="prev_next post_nav">
-	{% if page.previous.url %}
-		<p class="previous">
-			«&nbsp;<a href="{{ page.previous.url }}/" rel="previous" title="{{ page.previous.title }}">{{ page.previous.title | truncatewords: 15 }}</a>
-		</p>
-	{% endif %} 
-	{% if page.next.url %}
-		<p class="next">
-			<a href="{{ page.next.url }}/" rel="next" title="{{ page.next.title }}">{{ page.next.title | truncatewords: 15 }}</a>&nbsp;»
-		</p>
-	{% endif %}
-</div>
-
-<div id="related-posts">
-  <h3>You might also like</h3>
-  <div>
-  {% for related in site.related_posts limit:3 %}
-    <div class="related-post">
-      <div class="image">
-        <img src="/images/posts/thumbnails/{{ related.image }}">
-      </div>
-      <div class="title">
-        <a href="{{ related.url }}/" target="_top">
-          {{ related.title }}
-        </a>
-      </div>
-    </div>
-  {% endfor %}
-  </div>
-</div>
-
+							<div id="related-posts">
+							  <h3>You might also like</h3>
+							  <div>
+							  {% for related in site.related_posts limit:3 %}
+							    <div class="related-post">
+							      <div class="image">
+							        <img src="/images/posts/thumbnails/{{ related.image }}">
+							      </div>
+							      <div class="title">
+							        <a href="{{ related.url }}/" target="_top">
+							          {{ related.title }}
+							        </a>
+							      </div>
+							    </div>
+							  {% endfor %}
+							  </div>
+							</div>
+					</div>
+					{% include footer.html %}
+				</div> <!-- /content-wrap -->
+			</div><!--/content-->
+			</div><!-- /fancy-container -->
 		</body>
 </html>
