css ref path correction

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,9 +44,9 @@
 							  {% endfor %}
 							  </div>
 							</div>
-					</div>
+					</div><!-- /content-wrap -->
 					{% include footer.html %}
-				</div> <!-- /content-wrap -->
+				</div> <!-- /page-wrap -->
 			</div><!--/content-->
 			</div><!-- /fancy-container -->
 		</body>
