--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 <meta name="robots" content="{{ page.meta-robots }}" />
 <meta name="description" content="{{ page.meta-description }}" />
 
-<link href="css/main.css" rel="stylesheet">
+<link href="/css/main.css" rel="stylesheet">
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="canonical" href="{{ page.url | canonical }}" />
 <link href='http://fonts.googleapis.com/css?family=Numans|Scada:400,700' rel='stylesheet' type='text/css'>
