--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,20 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+	{% include head.html %}
+		<body>
+			<div class="fancy-container">
+			<div class="content-container">
+				<div class="page-wrap">
+					{% include header.html %}
+					<div class="content-wrap">
+						<h1> {{ page.title }} </h1>
 
-{% include themes/twitter/page.html %}
+							{{ page.content }}
+
+					</div><!-- /content-wrap -->
+					{% include footer.html %}
+				</div> <!-- /page-wrap -->
+			</div><!--/content-->
+			</div><!-- /fancy-container -->
+		</body>
+</html>
