--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@
 		<body>
 			<div class="fancy-container">
 			<div class="content-container">
-				<div class="page-wrap">
+				<div class="post-wrap">
 					{% include header.html %}
 					<div class="content-wrap">
 						<h1> {{ page.title }} </h1>
@@ -13,7 +13,7 @@
 
 					</div><!-- /content-wrap -->
 					{% include footer.html %}
-				</div> <!-- /page-wrap -->
+				</div> <!-- /post-wrap -->
 			</div><!--/content-->
 			</div><!-- /fancy-container -->
 		</body>
