--- a/css/main.css
+++ b/css/main.css
@@ -175,6 +175,20 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   h1, h1 a, h1 a:visited {
     color: #FF0051;
   }
+    header h1 {
+      position: relative;
+      font-size: 3.0em;
+    }
+    header h1:after {
+      position: absolute;
+      background: url(/images/white-grunge.png) repeat-x;
+      width: 515px;
+      height: 50px;
+      top:11px;
+      left: -10px;
+      display: block;
+      content: '';
+    }
   h2, h2 a, h2 a:visited {
     color: #FF4D00;
   }
@@ -186,12 +200,12 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
     color: #75AB00;
   }
 
-  h3, h3 + p {
-    margin-left: 1em;
-  }
-  h4, h4 + p {
-    margin-left: 2em;
-  }
+    .post-wrap h3, .post-wrap h3 + p {
+      margin-left: 1em;
+    }
+    .post-wrap h4, .post-wrap h4 + p {
+      margin-left: 2em;
+    }
 
 .fancy-container {
   background: rgb(246,245,238); /* Old browsers */
@@ -219,30 +233,15 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 
 
 /* Custom container */
-.page-wrap {
+.page-wrap, .post-wrap {
 margin: 0px auto;
 max-width: 800px;
 }
-.page-wrap > hr {
+.page-wrap > hr, .post-wrap > hr {
 margin: 30px 0;
 }
 .content-wrap {
   margin-left: 3em;
-}
-
-header h1 {
-  position: relative;
-  font-size: 3.0em;
-}
-header h1:after {
-  position: absolute;
-  background: url(/images/white-grunge.png) repeat-x;
-  width: 515px;
-  height: 50px;
-  top:11px;
-  left: -10px;
-  display: block;
-  content: '';
 }
 
 .row-fluid .thumb-row {
