--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,5 +6,5 @@
           <li><a href="#">Contact</a></li>
         </ul>
 	</nav>-->
-	<h1>Jan Dennison : Blog</h1>
+	<a href="{{ site.url }}" rel="bookmark" title="Jan Dennison : WebDev"><h1>Jan Dennison : WebDev</h1></a>
 </header>
