page template, gallery template

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,14 @@
 <header>
-	<!--<nav>
-		<ul class="nav nav-pills pull-right">
+	<nav>
+		<ul class="nav">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
+          <li>Portfolio</a>
+          	<ul class="portfolio-nav">
+          		<li><a href="/portfolio/verisimilitude-sylva/">Verisimilitude Sylva</a></li>
+          	</ul></li>
         </ul>
-	</nav>-->
+	</nav>
 	<a href="{{ site.url }}" rel="bookmark" title="Jan Dennison : WebDev"><h1>Jan Dennison : WebDev</h1></a>
 </header>
