--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,11 @@
 <html lang="en">
 	{% include head.html %}
 		<body>
-			<div class="fancy-container">
-			<div class="content-container">
-				<div class="page-wrap">
+			<div class="dkgrunge-container">
+			<div class="ltgrunge-container">
+				<div class="content-wrap">
 					{% include header.html %}
-					<div class="content-wrap">
+					<div class="home-wrap">
 						{{ content }}
 					</div>
 					{% include footer.html %}
