--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,11 @@
 <html lang="en">
 	{% include head.html %}
 		<body>
-			<div class="fancy-container">
-			<div class="content-container">
-				<div class="page-wrap">
+			<div class="dkgrunge-container">
+			<div class="ltgrunge-container">
+				<div class="content-wrap">
 					{% include header.html %}
-					<div class="content-wrap">
+					<div class="post-wrap">
 						<h1> {{ page.title }} </h1>
 
 							<span class="meta"> {{ page.date | date: '%B' }} {{ page.date | date: '%e' }}, {{ page.date | date: '%Y' }} </span>
