Image thumbnails, blog post, sidebar

--- a/_includes/teasers.html
+++ b/_includes/teasers.html
@@ -1,6 +1,6 @@
 <div class="row-fluid teasers">
 	{% for post in teasers offset:teasers_skip limit:teasers_take %}
-		<div class="row-fluid span3">
+		<div class="row-fluid">
 			<a href="{{ post.url }}" class="fancybox-thumb" rel="fancybox-thumb" title="{{ post.title }}"><img class="post-thumb-img" alt="{{ post.title }}" src="{{ post.image }}"></a>
 
 			<h4> <a href="{{ post.url }}" rel="bookmark" title="Permanent link to {{ post.url }}">{{ post.title }}</a> </h4>
