--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 			<div class="ltgrunge-container">
 				<div class="content-wrap">
 					{% include header.html %}
-					<div class="home-wrap">
+					<div class="home-wrap clearfix">
 						{{ content }}
 					</div>
 					{% include footer.html %}
