--- a/_includes/featured-posts.html
+++ b/_includes/featured-posts.html
@@ -1,14 +1,18 @@
 {% for post in site.posts limit:4 %}
-<div class="row-fluid">
+<div class="row-fluid featured-post">
 	<h2> <a href="{{ post.url }}" rel="bookmark" title="Permanent link to {{ post.title }}">{{ post.title }}</a> </h2>
-	<span class="meta"> {{ post.date | date: '%B' }} {{ post.date | date: '%e' }}, {{ post.date | date: '%Y' }} </span>
-	<div class="row-fluid">
-		<div class="post-info row-fluid span7">
-		<p> {{ post.excerpt }} </p>
+	<div class="row-fluid"><!-- post content -->
+		<div class="post-info row-fluid span5">
+				<span class="meta"> {{ post.date | date: '%B' }} {{ post.date | date: '%e' }}, {{ post.date | date: '%Y' }} </span>
+				<p> {{ post.excerpt }} </p>
 		</div>
-		<div class="post-img row-fluid span5">
-			<a href="{{ post.url }}" rel="bookmark" title="Permanent link to {{ post.title }}"><img class="post-thumb-img" alt="Image for {{ post.title }}" src="{{ post.image }}"></a>
+		<div class="row-fluid span6">
+			<div class="post-thumbnail focal-point {{ post.orientation }} {{ post.focal-horz }} {{ post.focal-vert }}">
+			<a href="{{ post.url }}" rel="bookmark" title="Permanent link to {{ post.title }}">
+				<div><img alt="Image for {{ post.title }}" src="{{ post.image }}"></div>
+			</a>
+			</div>
 		</div>
-	</div>
+	</div><!-- end content -->
 </div><!-- end row -->
 {% endfor %} 
