--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@
 								{% endif %}
 							</div>
 
-							<div id="related-posts">
+<!-- 							<div id="related-posts">
 							  <h3>You might also like</h3>
 							  <div>
 							  {% for related in site.related_posts limit:3 %}
@@ -46,7 +46,7 @@
 							  {% endfor %}
 							  </div>
 							</div>
-					</div><!-- /content-wrap -->
+ -->					</div><!-- /content-wrap -->
 					{% include footer.html %}
 				</div> <!-- /page-wrap -->
 			</div><!--/content-->
