changes to design/layout/content

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,9 @@
 <!-- The Links -->
 <link rel="canonical" href="{{ page.url | canonical }}" />
 <link href="/css/main.css" rel="stylesheet">
+<link class="style" href="/css/grunge.css" rel="stylesheet">
+<!-- <link href="/css/modern.css" rel="stylesheet">
+ -->
 <link rel="shortcut icon" href="favicon.ico">
 <link href='http://fonts.googleapis.com/css?family=Numans|Scada:400,700' rel='stylesheet' type='text/css'>
 
