--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -3,8 +3,9 @@
 	{% include head.html %}
 		<body>
 					{% include header.html %}
-			<div class="grunge-container">
-			<div class="grunge-container-overlay">
+			<div class="container">
+			<div class="container-overlay">
+				{% include nav.html %}
 				<div class="content-wrap">
 					<div class='gallery-wrap'>	
 						<h1> {{ page.title }} </h1>
@@ -12,7 +13,7 @@
 					</div>
 					{% include footer.html %}
 				</div> <!-- /content-wrap -->
-			</div><!--/content-->
-			</div><!-- /fancy-container -->
+			</div><!--/container-overlay-->
+			</div><!-- /container -->
 		</body>
 </html>
