--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,9 @@
 	{% include head.html %}
 		<body>
 					{% include header.html %}
-			<div class="grunge-container">
-			<div class="grunge-container-overlay">
+			<div class="container">
+			<div class="container-overlay">
+				{% include nav.html %}
 				<div class="content-wrap">
 					<div class="post-wrap">
 						<h1> {{ page.title }} </h1>
@@ -49,7 +50,7 @@
  -->					</div><!-- /content-wrap -->
 					{% include footer.html %}
 				</div> <!-- /page-wrap -->
-			</div><!--/content-->
-			</div><!-- /fancy-container -->
+			</div><!--/container-overlay-->
+			</div><!-- /container -->
 		</body>
 </html>
