--- a/font/fontello.css
+++ b/font/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?35134589');
-  src: url('../font/fontello.eot?35134589#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?35134589') format('woff'),
-       url('../font/fontello.ttf?35134589') format('truetype'),
-       url('../font/fontello.svg?35134589#fontello') format('svg');
+  src: url('/fontello.eot?35134589');
+  src: url('/fontello.eot?35134589#iefix') format('embedded-opentype'),
+       url('/fontello.woff?35134589') format('woff'),
+       url('/fontello.ttf?35134589') format('truetype'),
+       url('/fontello.svg?35134589#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
