--- a/css/main.css
+++ b/css/main.css
@@ -86,8 +86,8 @@ body,div,ul,li,span,a {box-sizing: border-box;}
 }
 
 .focal-point div {
-    position: relative; 
-    max-width: none; 
+    position: relative;
+    max-width: none;
     height: auto;
 }
 
@@ -311,12 +311,12 @@ body,div,ul,li,span,a {box-sizing: border-box;}
     }
 
 /* ==========================================================================
-   Grunge Stylesheet
+   Modern Stylesheet
    Author: Jan Dennison
    Created: July 2013
    ========================================================================== */
 
-/*  Basics 
+/*  Basics
     ============================ */
 body {
 	-webkit-box-sizing: border-box;
@@ -324,7 +324,7 @@ body {
 	        box-sizing: border-box;
   color: #222;
   font-family: 'Numans', sans-serif;
-  letter-spacing: -1px;
+  letter-spacing: -0.3px;
   margin: 0;
 }
 
@@ -344,7 +344,7 @@ body {
   display: block;
 }
 
-/*  Typography 
+/*  Typography
     ============================ */
 a, a:visited {
   color: #00AAA4;
@@ -405,7 +405,7 @@ span.meta {
 }
 
 
-/*  Containers 
+/*  Containers
     ============================ */
 .container {
   margin: 2em 0;
@@ -450,7 +450,7 @@ Main Menu
 .main-menu-nav {
   display: block;
   margin-top: -3em;
-} 
+}
 
   .main-menu-nav ul {
       z-index: 999999;
@@ -480,7 +480,7 @@ Main Menu
     margin-right: 1em;
     position: relative;
     padding: .5em 0em .5em 0;
-    
+
   }
   .main-menu-nav a:hover {
     color: white;
@@ -493,7 +493,7 @@ Main Menu
   .main-menu-nav ul > li:hover > a {
     color: #545454;
   }
-  
+
   /* Second Level Dropdown */
   .main-menu-nav ul > li ul {
     opacity: 0;
@@ -523,7 +523,7 @@ Main Menu
     padding: 0 1em;
     margin-right: 0;
   }
-  
+
   /* Third Level  Dropdown*/
   .main-menu-nav ul > li ul li ul {
     opacity: 0;
@@ -664,7 +664,7 @@ pre {
 #sylva img {
   width: 197px;
   height: 275px;
-} 
+}
 
 #wanderlust .focal-point {
   height: 200px;
