--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,3 @@
 <header>
-	<a href="{{ site.url }}" rel="bookmark" title="Jan Dennison : WebDev"><h1>Jan Dennison :WebDev Blog</h1></a>
+	<a href="{{ site.url }}" rel="bookmark" title="Jan Dennison : WebDev"><h1>Jan Dennison : WebDev</h1></a>
 </header>
