update jekyll head css ref

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 <!-- The Links -->
 <link rel="canonical" href="{{ page.url | canonical }}" />
 <link href="/css/main.css" rel="stylesheet">
-<!-- <link class="style" href="/css/grunge.css" rel="stylesheet"> -->
+<link class="style" href="" rel="stylesheet">
 <!-- <link href="/css/modern.css" rel="stylesheet">
  -->
 <link rel="shortcut icon" href="favicon.ico">
