update change css nav

--- a/css/main.css
+++ b/css/main.css
@@ -543,8 +543,11 @@ Main Menu
   .main-menu-nav ul > li ul li ul li {
     border-left: 1px solid #eee;
   }
-
-
+/* Change CSS Style Nav */
+.select-style li {
+  display: block;
+  float: none;
+}
 /**
   Images
 **/
