--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
   <nav class="main-menu-nav row-fluid">
     <ul id="menu" class="menu">
-      <li class="menu-item"><a href="http://jandennison.com">Resume</a></li>
-      <li class="menu-item"><a href="#">About This</a></li>
-      <li class="menu-item"><a href="http://jandennison.com">Web Portfolio</a></li>
+      <!-- <li class="menu-item"><a href="http://jandennison.com">Resume</a></li> -->
+      <!-- <li class="menu-item"><a href="#">About This</a></li> -->
+      <!-- <li class="menu-item"><a href="http://jandennison.com">Web Portfolio</a></li> -->
       <li class="menu-item"><a href="">Art Portfolio</a>
         <ul class="menu">
           <li class="menu-item"><a href="/portfolio/verisimilitude-sylva/">Verisimilitude Sylva</a></li>
@@ -11,8 +11,11 @@
       </li>
     </ul>
     <ul class="select-style">
-      <li>Select a CSS Style:</li>
-      <li><a href="#" class="grunge" rel="/css/grunge.css">Grunge</a></li>
-      <li><a href="#" class="modern" rel="/css/modern.css">Modern</a></li>
+      <li>Change CSS Style:
+        <ul class="menu">
+          <li><a href="#" class="grunge" rel="/css/grunge.css">Grunge</a></li>
+          <li><a href="#" class="modern" rel="/css/modern.css">Modern</a></li>
+        </ul>
+      </li>
     </ul>
   </nav>
