--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,6 @@
 <header>
-	<a href="{{ site.url }}" rel="bookmark" title="Jan Dennison"><h1>Jan Dennison</h1></a>
+	<h1>
+    <a href="{{ site.url }}" rel="bookmark" title="Jan Dennison">Jan Dennison</a>
+    <p>Dev Bootcamp Localhost | Blog</p>
+  </h1>
 </header>
