--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,10 +3,10 @@
       <!-- <li class="menu-item"><a href="http://jandennison.com">Resume</a></li> -->
       <!-- <li class="menu-item"><a href="#">About This</a></li> -->
       <!-- <li class="menu-item"><a href="http://jandennison.com">Web Portfolio</a></li> -->
-      <li>Change CSS Style:
+      <li class="menu-item">Change CSS Style:
         <ul class="menu">
-          <li><a href="#" class="grunge" rel="/css/grunge.css">Grunge</a></li>
-          <li><a href="#" class="modern" rel="/css/modern.css">Modern</a></li>
+          <li class="menu-item"><a href="#" class="grunge" rel="/css/grunge.css">Grunge</a></li>
+          <li class="menu-item"><a href="#" class="modern" rel="/css/modern.css">Modern</a></li>
         </ul>
       </li>
       <li class="menu-item"><a href="">Art Portfolio</a>
