--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
           <li class="menu-item"><a href="#" class="modern" rel="/css/modern.css">Modern</a></li>
         </ul>
       </li>
-      <li class="menu-item"><a href="">Art Portfolio</a>
+      <li class="menu-item">Art Portfolio:
         <ul class="menu">
           <li class="menu-item"><a href="/portfolio/verisimilitude-sylva/">Verisimilitude Sylva</a></li>
           <li class="menu-item"><a href="/portfolio/wanderlust/">Wanderlust</a></li>
