correct header subtitle

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
 	<h1>
     <a href="{{ site.url }}" rel="bookmark" title="Jan Dennison">Jan Dennison</a>
-    <p>Dev Bootcamp Localhost | Blog</p>
+    <p>Front End Developer</p>
   </h1>
 </header>
