--- a/css/main.css
+++ b/css/main.css
@@ -481,7 +481,7 @@ Main Menu
     font-size: 12px;
     margin-right: 1em;
     position: relative;
-    padding: .5em 0em .5em 0;
+    padding: .5em;
 
   }
   .main-menu-nav a:hover {
