reconnect js for style swap nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
       <!-- <li class="menu-item"><a href="#">About This</a></li> -->
       <!-- <li class="menu-item"><a href="http://jandennison.com">Web Portfolio</a></li> -->
       <li class="menu-item">Change CSS Style:
-        <ul class="menu">
+        <ul class="menu select-style">
           <li class="menu-item"><a href="#" class="grunge" rel="/css/grunge.css">Grunge</a></li>
           <li class="menu-item"><a href="#" class="modern" rel="/css/modern.css">Modern</a></li>
         </ul>
