revert to md index

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,7 @@
         <p>&copy; Jan Dennison</p>
       </div>
 
-<!-- Site Scripts -->
-<!-- FancyBox -->
-<script type="text/javascript">
-	$(document).ready(function() {
-		$(".fancybox").fancybox();
-	});
-</script>
+<!-- The jQuery and scripts -->
+<script type="text/javascript" src="/js/jquery-ui/js/jquery-1.9.1.js"></script>
+<script type="text/javascript" src="/js/main.js"></script>
+
