--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,23 +12,5 @@
 <!-- Link placeholder to change stylesheets -->
 <link class="style" href="" rel="stylesheet">
 
-<link rel="shortcut icon" href="favicon.ico">
+<link rel="shortcut icon" href="/favicon.ico">
 <link href='http://fonts.googleapis.com/css?family=Numans|Scada:400,700' rel='stylesheet' type='text/css'>
-
-<!-- Add jQuery libraries -->
-<script type="text/javascript" src="/js/jquery-ui/js/jquery-1.9.1.js"></script>
-<link rel="stylesheet" href="/js/jquery-ui/css/pepper-grinder/jquery-ui-1.10.3.custom.min.css" type="text/css" media="screen" />
-<script type="text/javascript" src="/js/jquery-ui/js/jquery-ui-1.10.3.custom.min.js"></script>
-
-<!-- FancyBox Images -->
-<link rel="stylesheet" href="/js/fancybox/source/jquery.fancybox.css" type="text/css" media="screen" />
-<script type="text/javascript" src="/js/fancybox/source/jquery.fancybox.pack.js"></script>
-<!-- Optionally add helpers - button, thumbnail and/or media -->
-<link rel="stylesheet" href="/js/fancybox/source/helpers/jquery.fancybox-buttons.css" type="text/css" media="screen" />
-<script type="text/javascript" src="/js/fancybox/source/helpers/jquery.fancybox-buttons.js"></script>
-<script type="text/javascript" src="/js/fancybox/source/helpers/jquery.fancybox-media.js"></script>
-<link rel="stylesheet" href="/js/fancybox/source/helpers/jquery.fancybox-thumbs.css" type="text/css" media="screen" />
-<script type="text/javascript" src="/js/fancybox/source/helpers/jquery.fancybox-thumbs.js"></script>
-<!-- End FancyBox -->
-
-<script type="text/javascript" src="/js/main.js"></script>
