--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,19 +1,17 @@
-  <nav class="main-menu-nav row-fluid">
-    <ul id="menu" class="menu">
-      <!-- <li class="menu-item"><a href="http://jandennison.com">Resume</a></li> -->
-      <!-- <li class="menu-item"><a href="#">About This</a></li> -->
-      <!-- <li class="menu-item"><a href="http://jandennison.com">Web Portfolio</a></li> -->
-      <li class="menu-item">Change CSS Style:
-        <ul class="menu select-style">
-          <li class="menu-item"><a href="#" class="grunge" rel="/css/grunge.css">Grunge</a></li>
-          <li class="menu-item"><a href="#" class="modern" rel="/css/modern.css">Modern</a></li>
-        </ul>
-      </li>
-      <li class="menu-item">Art Portfolio:
-        <ul class="menu">
-          <li class="menu-item"><a href="/portfolio/verisimilitude-sylva/">Verisimilitude Sylva</a></li>
-          <li class="menu-item"><a href="/portfolio/wanderlust/">Wanderlust</a></li>
-        </ul>
-      </li>
-    </ul>
-  </nav>
+<nav>
+  <ul>
+    <li><a href="#intro">Introduction</a></li>
+    <li><a href="/blog">DevBootcamp Blog</a></li>
+    <li>Web Portfolio:
+      <ul>
+        <li>To come</li>
+      </ul>
+    </li>
+    <li>Art Portfolio:
+      <ul>
+        <li><a href="/portfolio/verisimilitude-sylva/">Verisimilitude Sylva</a></li>
+        <li><a href="/portfolio/wanderlust/">Wanderlust</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
