--- a/_includes/header_post.html
+++ b/_includes/header_post.html
@@ -2,5 +2,5 @@
     <h1>
       <a href="{{ site.url }}" rel="bookmark" title="Jan Dennison">Jan Dennison</a>
     </h1>
-    <p>Front End Developer</p>
+    <p>Front End Developer | Blog</p>
 </header>
